# sql-proxy

./: .dockerignore  .gitignore  ARCHITECTURE_SUMMARY.md  CMakeLists.txt  CMakeLists_simple.txt  DOCKER.md  Dockerfile  FEATURES_AND_IMPROVEMENTS.md  FLOW_AUDIT.md  FLOW_DIAGRAM.md  OPTIMIZATION_ANALYSIS.md  QUICK_TEST.sh  README.md  architecture-v2.jsx  architecture.jsx  docker-compose-build-only.yml  docker-compose.yml  flow-simulation.jsx  stress_test.sh  test_suite.sh  tests.txt
config/: proxy.toml  proxy_core.toml
docs/: flow_visualization.html
include/alerting/: alert_evaluator.hpp  alert_types.hpp
include/analyzer/: index_recommender.hpp  query_explainer.hpp  schema_cache.hpp  sql_analyzer.hpp  synthetic_data_generator.hpp
include/audit/: audit_emitter.hpp  audit_encryptor.hpp  audit_record.hpp  audit_sampler.hpp  audit_sink.hpp  file_sink.hpp  kafka_sink.hpp  ring_buffer.hpp  syslog_sink.hpp  webhook_sink.hpp
include/auth/: auth_chain.hpp  iauth_provider.hpp  jwt_auth_provider.hpp  ldap_auth_provider.hpp  oidc_auth_provider.hpp  scram_sha256.hpp
include/cache/: result_cache.hpp
include/catalog/: data_catalog.hpp
include/classifier/: classifier_registry.hpp
include/compliance/: report_generator.hpp
include/config/: config_loader.hpp  config_types.hpp  config_watcher.hpp  iconfig_store.hpp  local_config_store.hpp
include/core/: arena.hpp  base64.hpp  column_type.hpp  cost_based_rewriter.hpp  database_type.hpp  error.hpp  json.hpp  llm_client.hpp  masking.hpp  pipeline.hpp  pipeline_builder.hpp  pipeline_stage.hpp  pipeline_stages.hpp  query_cost_estimator.hpp  query_rewriter.hpp  request_context.hpp  slow_query_tracker.hpp  transaction_coordinator.hpp  types.hpp  utils.hpp
include/db/: backend_registry.hpp  database_router.hpp  generic_connection_pool.hpp  generic_query_executor.hpp  iconnection_factory.hpp  iconnection_pool.hpp  idb_backend.hpp  idb_connection.hpp  iquery_executor.hpp  ischema_loader.hpp  isql_parser.hpp  pooled_connection.hpp  routing_query_executor.hpp  schema_constants.hpp  tenant_pool_registry.hpp
include/executor/: circuit_breaker.hpp  circuit_breaker_registry.hpp  connection_pool.hpp  query_executor.hpp  replica_routing_executor.hpp
include/finops/: cost_tracker.hpp
include/parser/: ast_keys.hpp  fingerprinter.hpp  parse_cache.hpp  sql_parser.hpp
include/plugin/: plugin_interface.hpp  plugin_loader.hpp
include/policy/: access_request_manager.hpp  policy_constants.hpp  policy_engine.hpp  policy_loader.hpp  policy_simulator.hpp  policy_trie.hpp  policy_types.hpp
include/schema/: schema_drift_detector.hpp  schema_manager.hpp
include/security/: anomaly_detector.hpp  brute_force_protector.hpp  column_encryptor.hpp  column_version_tracker.hpp  compliance_reporter.hpp  env_key_manager.hpp  ikey_manager.hpp  ip_allowlist.hpp  lineage_tracker.hpp  local_key_manager.hpp  sql_firewall.hpp  sql_injection_detector.hpp  vault_key_manager.hpp
include/server/: adaptive_rate_controller.hpp  admission_controller.hpp  binary_rpc_server.hpp  dashboard_handler.hpp  dashboard_html.hpp  distributed_rate_limiter.hpp  graphql_handler.hpp  http_constants.hpp  http_server.hpp  irate_limiter.hpp  openapi_handler.hpp  prepared_stmt_tracker.hpp  rate_limiter.hpp  request_priority.hpp  response_compressor.hpp  server_types.hpp  shutdown_coordinator.hpp  ssl_connection.hpp  waitable_rate_limiter.hpp  websocket_handler.hpp  wire_copy.hpp  wire_protocol.hpp  wire_server.hpp  wire_session.hpp
include/tenant/: data_residency.hpp  tenant_context.hpp  tenant_manager.hpp
include/tracing/: span.hpp  trace_context.hpp
sql/: 001_schema.sql  002_seed.sql  003_audit_table.sql
src/: main.cpp
src/alerting/: alert_evaluator.cpp
src/analyzer/: index_recommender.cpp  query_explainer.cpp  schema_cache.cpp  sql_analyzer.cpp  synthetic_data_generator.cpp
src/audit/: audit_emitter.cpp  audit_encryptor.cpp  audit_sampler.cpp  file_sink.cpp  kafka_sink.cpp  syslog_sink.cpp  webhook_sink.cpp
src/auth/: auth_chain.cpp  jwt_auth_provider.cpp  ldap_auth_provider.cpp  oidc_auth_provider.cpp  scram_sha256.cpp
src/cache/: result_cache.cpp
src/catalog/: data_catalog.cpp
src/classifier/: classifier_registry.cpp
src/compliance/: report_generator.cpp
src/config/: config_loader.cpp  config_watcher.cpp  local_config_store.cpp
src/core/: arena.cpp  cost_based_rewriter.cpp  llm_client.cpp  masking.cpp  pipeline.cpp  pipeline_builder.cpp  pipeline_stages.cpp  query_cost_estimator.cpp  query_rewriter.cpp  slow_query_tracker.cpp  transaction_coordinator.cpp
src/db/: database_router.cpp  generic_connection_pool.cpp  generic_query_executor.cpp  pooled_connection.cpp  routing_query_executor.cpp  tenant_pool_registry.cpp
src/executor/: circuit_breaker.cpp  circuit_breaker_registry.cpp  connection_pool.cpp  query_executor.cpp  replica_routing_executor.cpp
src/finops/: cost_tracker.cpp
src/parser/: fingerprinter.cpp  parse_cache.cpp  sql_parser.cpp
src/plugin/: plugin_loader.cpp
src/policy/: access_request_manager.cpp  policy_engine.cpp  policy_loader.cpp  (+2 more)
tests/: test_alert_evaluator.cpp  test_analyzer.cpp  test_anomaly_detector.cpp  test_audit_integrity.cpp  test_audit_rotation.cpp  test_audit_sampler.cpp  test_audit_sink.cpp  test_auth.cpp  test_auth_providers.cpp  test_benchmark.cpp  test_brute_force.cpp  test_bucket_cleanup.cpp  test_circuit_breaker_classification.cpp  test_circuit_breaker_events.cpp  test_classifier.cpp  test_column_encryptor.cpp  test_column_policy.cpp  test_column_version_tracker.cpp  test_compliance_reporter.cpp  test_config_include.cpp  test_config_reload.cpp  test_config_validation.cpp  test_cost_based_rewriter.cpp  test_dashboard.cpp  test_data_catalog.cpp  test_data_residency.cpp  test_database_router.cpp  test_distributed_rate_limiter.cpp  test_encoding_bypass.cpp  test_env_config.cpp  test_fingerprinter.cpp  test_graphql_handler.cpp  test_health_check.cpp  test_index_recommender.cpp  test_ip_allowlist.cpp  test_lineage_tracker.cpp  test_llm_client.cpp  test_masking.cpp  test_parse_cache_invalidation.cpp  test_parser.cpp  (+33 more)
(+100 files in other folders)
